"PersonneInfo" : methode doGet -> liste des personnes enregistrées en base "readme" : insertion d'une ligne -> liste des personnes "Person" : constructeur inversion ordre nom x prenom "myform.html" : traduction en français (firstname:prenom)

--- a/src/main/webapp/myform.html
+++ b/src/main/webapp/myform.html
@@ -1,13 +1,13 @@
 <html>
 	<body>
 		<form method="POST" action="/personneinfo">
-			Name : <input type=text size=20 name=name> <br />
-			Firstname :  <input type=text size=20 name=firstname> <br />
-			date de naisasnce (dd/mm/aaaa) : <input type=text size=10 name=datenaissance> <br />
-			email :  <input type=text size=32 name=email> <br />
-			sexe(F/M) : <input type=text size=1 name=sexe> <br />
-			loginFb <input type=text size=20 name=loginFb><br />
-			<input type=submit value=Send>
+			Nom : <input type="text" size="20" name="name"> <br />
+			Prénom :  <input type="text" size="20" name="firstname"> <br />
+			Date de Naissance (dd/mm/aaaa) : <input type="text" size="10" name="datenaissance"> <br />
+			Email :  <input type="text" size="32" name="email"> <br />
+			Sexe(F/M) : <input type="text" size="1" name="sexe"> <br />
+			Login Facebook <input type="text" size="20" name="loginFb"><br />
+			<input type="submit" value="Enregistrer">
 		</form>
 	</body>
 </html>
